--- a/footer.css
+++ b/footer.css
@@ -1,3 +1,39 @@
+@media only screen and (min-width:600px){
+    .contact-h{
+        font-size: 2em;
+    }
+    .contact-info{
+        align-items: center;
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .form-control{
+        margin: 5px;
+        border-radius: 8px;
+        border: none;
+        height: 80px;
+        width: 411px;
+    }
+
+}
+@media only screen and (max-width:600px){
+    .contact-h{
+        font-size: 1.2em;
+        text-decoration: underline ;
+    }
+    .contact-info{
+        text-align: center;
+    }
+    .form-control{
+        margin: 5px;
+        border-radius: 8px;
+        border: none;
+        height: 80px;
+        width: 211px;
+    }
+    
+}
+
 .footer{
     background-color: black;
     padding: 20px;
@@ -8,14 +44,9 @@
     text-align: center;
     color: white;
     font-weight: 600;
-    font-size: 2em;
     padding: 12px 8px;
 }
-.contact-info{
-    align-items: center;
-    display: flex;
-    justify-content: space-evenly;
-}
+
 .links{
     font-size: 1.8em;
     color: white;
@@ -45,13 +76,7 @@
     height: 40px;
     width: 211px;
 }
-.form-control{
-    margin: 5px;
-    border-radius: 8px;
-    border: none;
-    height: 80px;
-    width: 411px;
-}
+
 .input-box button{
     margin: 8px;
     border-radius: 10px;
