--- a/index.css
+++ b/index.css
@@ -6,59 +6,60 @@
  body{
     background-color: black;
 }
-@media only screen and (min-width: 600px){
-    .logo{
-        color: white;
-        margin-left: 2rem;
-        font-family: 'Pacifico', cursive;
-    }
-    .header-list{
-        display: flex;
-        justify-content: space-between;
-        width: 300px;
-        list-style: none;
-        margin-right: 4rem;
-    
-    }
-    .header-parent{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background-color: black;
-    }
-}
-@media only screen and (max-width:600px){
-    .logo{
-        color: white;
-        margin-left: 2rem;
-        font-family: 'Pacifico', cursive;
-    }
-    .header-list{
-        list-style: none;
-    }
-      .header-parent{
-        text-align: center;
-        background-color: black;
-    }
-}
+/*hamburger menu*/
+.hamburger{
+    display: none;
+    cursor: pointer;
 
+}
+.bar{
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: white;
+}
+.header-list.hello{
+    display: flex;
+}
+.logo{
+    color: white;
+    margin-left: 2rem;
+    font-family: 'Pacifico', cursive;
+}
+.header-list{
+    display: flex;
+    justify-content: space-between;
+    width: 300px;
+    list-style: none;
+    margin-right: 4rem;
+
+}
+.header-parent{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black;
+}
 a {
     text-decoration: none;
 }
-.list-style{
+.nav-link{
     color: white;
     font-family: 'Pacifico', cursive;
 }
-.list-style:hover{
-    color: white;
-    font-size: 150%;
+.nav-item .nav-link:hover{
+        color: white;
+        font-size: 150%;
 }
+
 .img-section{
     width: 100%;
     height: 675px;
     border-radius: 100px;
 }
-
 .container{
     position: relative;
     
@@ -343,4 +344,38 @@ p{
     border-radius: 60%;
     background: white;
     cursor: pointer;
+}
+
+@media(max-width:768px){
+    .hamburger{
+        display: block;
+    }
+    .hamburger.active .bar:nth-child(2){
+        opacity: 0;
+    }
+    .hamburger.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+    .hamburger.active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+    .header-list{
+        position: fixed;
+        right: -100px;
+        top: 70px;
+        gap: 0;
+        flex-direction: column;
+        background-color: blue;
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+        display: none;
+        z-index: 1
+    }
+    .nav-item{
+        margin: 16px 0;
+    }
+    .nav-menu.active{
+        right: 0;
+    }
 }
