--- a/index.css
+++ b/index.css
@@ -2,7 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600&family=Pacifico&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alkatra&display=swap');
 
-
+html{
+    scroll-behavior: smooth;
+}
  body{
     background-color: black;
 }
