--- a/index.css
+++ b/index.css
@@ -333,7 +333,7 @@ p{
     }
     .header-list{
         position: fixed;
-        right: -100px;
+        right: -64px;
         top: 70px;
         gap: 0;
         flex-direction: column;
@@ -374,11 +374,20 @@ p{
             /*font-family: 'Pacifico', cursive;*/
             font-family: 'Nunito Sans', sans-serif;
             font-size: 3vh;
-            left: 45%;
+            left: 3%;
             transform: translate(-50%, -50%);
-            top: 50%;
+            top: 13%;
         }
         h2, h3, h4{
             margin: auto;
         }
     }
+@media only screen and (max-width:784px) {
+    .img-section{
+        width: 100%;
+        height: 500px;
+        border-radius: 100px;
+
+    }
+    
+}
